examples/qualification/executable_module_entry/negative_transitive_duplicate_symbol_collision/src/left.sm
Import "alpha.sm"

fn left_score() -> i32 {
    return alpha_score();
}
